<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:id="@+id/llTodo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/twPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/peso"/>

        <EditText
            android:id="@+id/etPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:maxLength="3"
            android:hint="@string/kg"
            android:inputType="phone"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/twAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/altura"/>

        <EditText
            android:id="@+id/etAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:maxLength="3"
            android:hint="@string/cm"
            android:inputType="phone"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rbHombre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rbHombre"
            android:checked="true"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="50dp"
            android:layout_height="match_parent"/>

        <RadioButton
            android:id="@+id/rbMujer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/rbMujer"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCalc"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/btnCalc"/>

    <RelativeLayout
        android:id="@+id/rlIMC"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/twNumeros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtIMC"
                android:maxLength="5"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/twInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentBottom="true"
            android:text="@string/nombre"
            android:layout_marginBottom="5dp"
            android:textStyle="bold" />
    </RelativeLayout>


</LinearLayout>