<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    app:cardCornerRadius="50dp"
    app:cardBackgroundColor="#00C6EC"
    android:layout_marginBottom="5dp"
    android:id="@+id/cvTodo">

    <RelativeLayout
        android:layout_margin="5dp"
        android:id="@+id/rLayout"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:id="@+id/llFecha"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/twMonth"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text=""
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/twDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textSize="40dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/twAge"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text=""
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/llFecha">

            <TextView
                android:id="@+id/twIndex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="" />

            <TextView
                android:id="@+id/twGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peso2"/>
                <TextView
                    android:id="@+id/twPesoRv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altura2"
                    tools:ignore="TextContrastCheck" />
                <TextView
                    android:id="@+id/twAlturaRv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/twIMC"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imc" />

            <TextView
                android:id="@+id/twCalc"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40dp"
                android:maxLength="5"
                android:text=""
                android:textStyle="bold"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
